--- a/index.html
+++ b/index.html
@@ -58,10 +58,25 @@
           alt=""
         />
       </section>
-      
-    </main>
-    <footer>
 
-    </footer>
+      <section class="categories container">
+        <h2 class="section-title">Categories</h2>
+        <div class="categories-card-container">
+          <div class="categories-card">
+            <h3>Watch</h3>
+            <img src="./Assets/images/categories/watch.png" alt="" />
+          </div>
+          <div class="categories-card">
+            <h3>Bag</h3>
+            <img src="./Assets/images/categories/bag.png" alt="" />
+          </div>
+          <div class="categories-card">
+            <h3>Shoes</h3>
+            <img src="./Assets/images/categories/shoes.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
