--- a/index.html
+++ b/index.html
@@ -76,6 +76,96 @@
           </div>
         </div>
       </section>
+
+      <section class="shoes-backpack">
+        <div class="shoes container">
+          <div class="shoes-backpack-title">
+            <h2>Shoes</h2>
+            <p>See All</p>
+          </div>
+          <div class="shoes-container">
+          <div class="shoes-card">
+            <img src="./Assets/images/shoes/shoe-1.png" alt="" />
+            <h2>Reebok Dart Men’s Shoes</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint.
+            </p>
+            <span class="card-price">$1289</span>
+            <button class="btn-style">
+              BUY NOW <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <div class="shoes-card">
+            <img src="./Assets/images/shoes/shoe-2.png" alt="" />
+            <h2>Reebok Pump</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint.
+            </p>
+            <span class="card-price">$799</span>
+            <button class="btn-style">
+              BUY NOW <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <div class="shoes-card">
+            <img src="./Assets/images/shoes/shoe-3.png" alt="" />
+            <h2>Reebok All Terrain</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint.
+            </p>
+            <span class="card-price">$699</span>
+            <button class="btn-style">
+              BUY NOW <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+        </div>
+        </div>
+        <div class="shoes container">
+          <div class="shoes-backpack-title">
+            <h2>Backpack</h2>
+            <p>See All</p>
+          </div>
+          <div class="shoes-container">
+          <div class="shoes-card">
+            <img src="./Assets/images/bags/bag-1.png" alt="" />
+            <h2>Ison Backpack</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
+            </p>
+            <span class="card-price">$1289</span>
+            <button class="btn-style">
+              BUY NOW <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <div class="shoes-card">
+            <img src="./Assets/images/bags/bag-2.png" alt="" />
+            <h2>Biaowang Backpack</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+            </p>
+            <span class="card-price">$799</span>
+            <button class="btn-style">
+              BUY NOW <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <div class="shoes-card">
+            <img src="./Assets/images/bags/bag-3.png" alt="" />
+            <h2>Dxyizu WS54 Smart</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint.
+            </p>
+            <span class="card-price">$699</span>
+            <button class="btn-style">
+              BUY NOW <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+        </div>
+        </div>
+      </section>
+
     </main>
     <footer></footer>
   </body>
