added footer section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <ul class="nav-items">
           <li><a href="">Home</a></li>
           <li><a href="">Product</a></li>
-          <li><a href="">About Us</a></li>
+          <li><a href="#Backpack">Backpack</a></li>
           <li><a href="">Contact Us</a></li>
         </ul>
       </nav>
@@ -84,89 +84,99 @@
             <p>See All</p>
           </div>
           <div class="shoes-container">
-          <div class="shoes-card">
-            <img src="./Assets/images/shoes/shoe-1.png" alt="" />
-            <h2>Reebok Dart Men’s Shoes</h2>
-            <p>
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint.
-            </p>
-            <span class="card-price">$1289</span>
-            <button class="btn-style">
-              BUY NOW <i class="fa-solid fa-arrow-right"></i>
-            </button>
-          </div>
-          <div class="shoes-card">
-            <img src="./Assets/images/shoes/shoe-2.png" alt="" />
-            <h2>Reebok Pump</h2>
-            <p>
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint.
-            </p>
-            <span class="card-price">$799</span>
-            <button class="btn-style">
-              BUY NOW <i class="fa-solid fa-arrow-right"></i>
-            </button>
-          </div>
-          <div class="shoes-card">
-            <img src="./Assets/images/shoes/shoe-3.png" alt="" />
-            <h2>Reebok All Terrain</h2>
-            <p>
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint.
-            </p>
-            <span class="card-price">$699</span>
-            <button class="btn-style">
-              BUY NOW <i class="fa-solid fa-arrow-right"></i>
-            </button>
+            <div class="shoes-card">
+              <img src="./Assets/images/shoes/shoe-1.png" alt="" />
+              <h2>Reebok Dart Men’s Shoes</h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint.
+              </p>
+              <span class="card-price">$1289</span>
+              <button class="btn-style">
+                BUY NOW <i class="fa-solid fa-arrow-right"></i>
+              </button>
+            </div>
+            <div class="shoes-card">
+              <img src="./Assets/images/shoes/shoe-2.png" alt="" />
+              <h2>Reebok Pump</h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint.
+              </p>
+              <span class="card-price">$799</span>
+              <button class="btn-style">
+                BUY NOW <i class="fa-solid fa-arrow-right"></i>
+              </button>
+            </div>
+            <div class="shoes-card">
+              <img src="./Assets/images/shoes/shoe-3.png" alt="" />
+              <h2>Reebok All Terrain</h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint.
+              </p>
+              <span class="card-price">$699</span>
+              <button class="btn-style">
+                BUY NOW <i class="fa-solid fa-arrow-right"></i>
+              </button>
+            </div>
           </div>
         </div>
-        </div>
-        <div class="shoes container">
+        <div class="shoes container" id="Backpack">
           <div class="shoes-backpack-title">
             <h2>Backpack</h2>
             <p>See All</p>
           </div>
           <div class="shoes-container">
-          <div class="shoes-card">
-            <img src="./Assets/images/bags/bag-1.png" alt="" />
-            <h2>Ison Backpack</h2>
-            <p>
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. 
-            </p>
-            <span class="card-price">$1289</span>
-            <button class="btn-style">
-              BUY NOW <i class="fa-solid fa-arrow-right"></i>
-            </button>
+            <div class="shoes-card">
+              <img src="./Assets/images/bags/bag-1.png" alt="" />
+              <h2>Ison Backpack</h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint.
+              </p>
+              <span class="card-price">$1289</span>
+              <button class="btn-style">
+                BUY NOW <i class="fa-solid fa-arrow-right"></i>
+              </button>
+            </div>
+            <div class="shoes-card">
+              <img src="./Assets/images/bags/bag-2.png" alt="" />
+              <h2>Biaowang Backpack</h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint.
+              </p>
+              <span class="card-price">$799</span>
+              <button class="btn-style">
+                BUY NOW <i class="fa-solid fa-arrow-right"></i>
+              </button>
+            </div>
+            <div class="shoes-card">
+              <img src="./Assets/images/bags/bag-3.png" alt="" />
+              <h2>Dxyizu WS54 Smart</h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint.
+              </p>
+              <span class="card-price">$699</span>
+              <button class="btn-style">
+                BUY NOW <i class="fa-solid fa-arrow-right"></i>
+              </button>
+            </div>
           </div>
-          <div class="shoes-card">
-            <img src="./Assets/images/bags/bag-2.png" alt="" />
-            <h2>Biaowang Backpack</h2>
-            <p>
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-            </p>
-            <span class="card-price">$799</span>
-            <button class="btn-style">
-              BUY NOW <i class="fa-solid fa-arrow-right"></i>
-            </button>
-          </div>
-          <div class="shoes-card">
-            <img src="./Assets/images/bags/bag-3.png" alt="" />
-            <h2>Dxyizu WS54 Smart</h2>
-            <p>
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint.
-            </p>
-            <span class="card-price">$699</span>
-            <button class="btn-style">
-              BUY NOW <i class="fa-solid fa-arrow-right"></i>
-            </button>
-          </div>
-        </div>
         </div>
       </section>
-
     </main>
-    <footer></footer>
+    <footer class="contact-us">
+      <div class="contact-us-praent container">
+        <h2>LET'S STAY IN TOUCH</h2>
+        <p>Get updates on sales specials and more</p>
+        <div class="input-btn-section">
+          <input type="text" name="" id="" placeholder="Enter your email" />
+          <button class="btn-style">Send</button>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
