--- a/index.html
+++ b/index.html
@@ -31,7 +31,21 @@
         </div>
         <ul class="nav-items">
           <li><a href="">Home</a></li>
-          <li><a href="">Product</a></li>
+
+          <li class="product-li">
+            <a href=""
+              >Product
+              <i class="fa-solid fa-angle-down"></i>
+            </a>
+          
+          <ul class="dropdown-nav-items">
+            <li><a href="">Product 1</a></li>
+            <li><a href="">Product 2</a></li>
+            <li><a href="">Product 3</a></li>
+            <li><a href="">Product 4</a></li>
+            <li><a href="">Product 5</a></li>
+          </ul>
+          </li>
           <li><a href="#Backpack">Backpack</a></li>
           <li><a href="">Contact Us</a></li>
         </ul>
